--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,10 @@
-[build]
-  command = "npm run build"
-  publish = "build/publish/"
-  functions = "build/functions/"
-  
+  [build]
+ 	  command = "npm run build"
+ 	  functions = "functions"
+ 	  publish = "build"
+ 	  
+ 	[dev]
+ 	  command = "svelte-kit dev"
+ 	 
+	[functions]
+	  directory = "netlify/functions"
